--- a/Veselova2019Project14/Veselova2019Project14.bib
+++ b/Veselova2019Project14/Veselova2019Project14.bib
@@ -133,3 +133,88 @@
 	biburl = {https://dblp.org/rec/bib/journals/corr/abs-1711-07289},
 	bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
+@article{pages:hal-01779893,
+	TITLE = {{Analytical symmetry detection in protein assemblies. I. Cyclic symmetries}},
+	AUTHOR = {Pag{\`e}s, Guillaume and Kinzina, Elvira and Grudinin, Sergei},
+	URL = {https://hal.inria.fr/hal-01779893},
+	JOURNAL = {{Journal of Structural Biology}},
+	PUBLISHER = {{Elsevier}},
+	VOLUME = {203},
+	NUMBER = {2},
+	PAGES = {142-148},
+	YEAR = {2018},
+	MONTH = Aug,
+	DOI = {10.1016/j.jsb.2018.04.004},
+	KEYWORDS = {Continuous Optimization ; Protein Assemblies ; Protein Structure ; Point-Group Symmetry},
+	PDF = {https://hal.inria.fr/hal-01779893/file/Analytical%20symmetry%20detection%20in%20cyclic%20protein%20assemblies.pdf},
+	HAL_ID = {hal-01779893},
+	HAL_VERSION = {v1},
+}
+
+@article{pages:hal-01816449,
+	TITLE = {{Analytical symmetry detection in protein assemblies. II. Dihedral and Cubic symmetries}},
+	AUTHOR = {Pag{\`e}s, Guillaume and Grudinin, Sergei},
+	URL = {https://hal.inria.fr/hal-01816449},
+	JOURNAL = {{Journal of Structural Biology}},
+	PUBLISHER = {{Elsevier}},
+	VOLUME = {203},
+	NUMBER = {3},
+	PAGES = {185-194},
+	YEAR = {2018},
+	MONTH = Sep,
+	DOI = {10.1016/j.jsb.2018.05.005},
+	KEYWORDS = {Protein Structure ; Continuous Optimization ; Discrete Optimization ; Point-Group Symmetry ; Cubic Groups ; Group Theory},
+	PDF = {https://hal.inria.fr/hal-01816449/file/AnAnaS-D-C.pdf},
+	HAL_ID = {hal-01816449},
+	HAL_VERSION = {v1},
+}
+
+@article{DBLP:journals/corr/HeZRS15,
+	author    = {Kaiming He and
+	Xiangyu Zhang and
+	Shaoqing Ren and
+	Jian Sun},
+	title     = {Deep Residual Learning for Image Recognition},
+	journal   = {CoRR},
+	volume    = {abs/1512.03385},
+	year      = {2015},
+	url       = {http://arxiv.org/abs/1512.03385},
+	archivePrefix = {arXiv},
+	eprint    = {1512.03385},
+	timestamp = {Mon, 13 Aug 2018 16:46:56 +0200},
+	biburl    = {https://dblp.org/rec/bib/journals/corr/HeZRS15},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/corr/VeitWB16,
+	author    = {Andreas Veit and
+	Michael J. Wilber and
+	Serge J. Belongie},
+	title     = {Residual Networks are Exponential Ensembles of Relatively Shallow
+	Networks},
+	journal   = {CoRR},
+	volume    = {abs/1605.06431},
+	year      = {2016},
+	url       = {http://arxiv.org/abs/1605.06431},
+	archivePrefix = {arXiv},
+	eprint    = {1605.06431},
+	timestamp = {Mon, 13 Aug 2018 16:47:46 +0200},
+	biburl    = {https://dblp.org/rec/bib/journals/corr/VeitWB16},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/corr/ZagoruykoK16,
+	author    = {Sergey Zagoruyko and
+	Nikos Komodakis},
+	title     = {Wide Residual Networks},
+	journal   = {CoRR},
+	volume    = {abs/1605.07146},
+	year      = {2016},
+	url       = {http://arxiv.org/abs/1605.07146},
+	archivePrefix = {arXiv},
+	eprint    = {1605.07146},
+	timestamp = {Mon, 13 Aug 2018 16:46:42 +0200},
+	biburl    = {https://dblp.org/rec/bib/journals/corr/ZagoruykoK16},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
