--- a/Veselova2019Project14/Veselova2019Project14.tex
+++ b/Veselova2019Project14/Veselova2019Project14.tex
@@ -1,5 +1,6 @@
 \documentclass[12pt,twosides]{article}
 \usepackage{jmlda}
+\usepackage{graphicx}
 %\NOREVIEWERNOTES
 \renewcommand*{\thefootnote}{\fnsymbol{footnote}}
 
@@ -19,7 +20,7 @@
 \organization
 {$^1$Московский физико-технический институт (МФТИ)}
 \abstract
-{В работе рассматривается улучшение алгоритма выделения осей симметрии и повторяющихся элементов в трёхмерной структуре белка. Общая задача анализа трёхмерных белковых структур с высокой эффективностью решается с помощью свёрточных нейросетей (СNN --- convolutional neural network). Относительно трансляции данных CNN обладают свойством устойчивости, или \textit{эквивариантности} --- коммутативности преобразования исходных данных и свёртки, однако для вращений данное свойство не сохраняется. Обеспечить эквивариантность всей нейросети предлагается заменой классических свёрточных фильтров на линейную комбинацию трёхмерных сферических гармоник, эквивариантных относительно вращений. Решение данной задачи позволит увеличить точность и скорость обработки белков. 
+{В работе рассматривается не требующий предварительной обработки и аугментации входных данных алгоритм для выделения осей симметрии и повторяющихся элементов в трёхмерной структуре белка. Задачи анализа белков на наличие структурных особенностей с высокой эффективностью решаются с помощью свёрточных нейросетей. Относительно трансляции входных данных CNN обладают свойством устойчивости, или \textit{эквивариантности} --- коммутативности преобразования исходных данных и свёртки, однако для вращений данное свойство не сохраняется. Искусственно постоянство ответа нейросетей на одних и тех же данных, подвергнутых жестким (евклидовым) преобразованиям достигается аугментацией входных данных. Обеспечить эквивариантность всей нейросети без необходимости аугментации данных предлагается заменой свёрточных фильтров на линейную комбинацию трёхмерных сферических гармоник, эквивариантных относительно вращений. Решение данной задачи позволит увеличить скорость обработки белков и, гипотетически, точность выделения структурных повторений.
 	
 \bigskip
 \textbf{Ключевые слова}: \emph {CNN, свёрточные нейросети, сферические гармоники, структурные повторения, оси симметрии, 3D объект}.}
@@ -30,8 +31,8 @@
 	%\linenumbers
 	
 	\section{Введение}
-	Машинное обучение широко применяется в задачах современных естественных наук, в частности в задачах структурной биологии. Большая часть получаемых на практике белков обладает повтояющимися элементами структуры или симметрией, которые влияют на функции белков и позволяют исследовать их эволюцию. Нахождение симметрий и повторов является важной задачей, во многих формулировках уже решённой. решённой с помощью классических методов машинного обучения в 2006 году \cite{MitGuiPau06}
-	При наличии точечного представления плотности 3D объекта задача определения всех типов симметрий была решена аналитически.
+	Задачи структурной биологии . Большая часть получаемых на практике белков обладает повтояющимися элементами структуры или симметрией, которые влияют на функции белков и позволяют исследовать их эволюцию. Нахождение симметрий и повторов является важной задачей, во многих формулировках уже решённой с помощью классических методов машинного обучения в 2006 году \cite{MitGuiPau06}
+	При наличии точечного представления плотности 3D объекта задача определения всех типов симметрий была решена аналитически \cite{pages:hal-01779893, pages:hal-01816449}.
 	Поэтому особый интерес представляет применение методов глубокого обучения и свёрточных нейросетей (CNN --- convolutional neural network), которые позволяют получать на нижних уровнях сети легко интерпретируемые характерные черты изучаемых объектов. 
 	
 	Предсказание трёхмерной структуры белка по его аминокислотному составу \cite{BioCNN18} и детектирование структурных повторений и внутренних симметрий с высокой точностью решается свёрточными нейросетями \cite{DeepSymmetry18}, однако существующие свёрточные нейросети не имеют возможности одинаково качественно обрабатывать входные данные при любых поворотах и сдвигах. Основная цель работы состоит в адаптации построенных нейросетей для выявления повторов и симметрий к различным преобразованиям входных данных. 
@@ -46,8 +47,7 @@
 	Данными в задаче являются $K=11$ карт атомных плотностей элементов белка. Каждая карта $\mathbf{x}_i\in\mathbb{R}^{24\times24\times24}$ обучающей выборки $\mathbf{X}$ получена искусственной симметризацией карт датасета Top8000 с порядком циклической симметрии от $1$ до $N_{order}\in[10,20]$.
 	Ответом на элементе выборки $\mathbf{f}(x_i)=\mathbf{f}_i\in\mathbb{R}^{N_{order}+6}$ является композиция двух векторов $\mathbf{y}_i\in\mathbb{R}^{N_{order}}$ и $\mathbf{z}_i\in\mathbb{R}^6$, где $\mathbf{y}_i$  определяет вероятность каждого порядка симметрии, $\mathbf{z}_i$ определяет положение оси симметрии. Размерность 6 для задания оси симметрии выбрана неслучайно: модель переводит ось в трёхмерном пространстве в её представление в шестимерном пространстве посредством \textit{отображения Веронезе} $V(x,y,z)=(x^2,y^2,z^2,\sqrt2yz,\sqrt2zx,\sqrt2xy)$. 
 	 
-	Исходная модель $\mathbf{f(X)}$ --- свёрточная нейросеть, состоящая из двух свёрточных слоёв, имеющих по 4 фильтра каждый, и трёх полносвязных слоёв, входом для которых является конкатенация столбцов выхода второго свёрточного слоя. Зададим $\mathbf{W}\in\mathbb{R}^{n\times4\times2}$ --- матрицу коэффициентов разложения каждого из 4 фильтров двух свёрточных слоёв нейросети на $n$ базисных сферических гармоник. Требуется адаптировать модель $\mathbf{f(X, W)}$ так, что при воздействии на исходные данные любым оператором $\pi(tr)$ трансляции $t$ и вращения $r$ реализуется свойство эквивариантности, т.е.
-	$$\mathbf{f}(\pi(tr)\mathbf{X,W)}=[\pi(tr)\mathbf{f}]\mathbf{(X,W)}.$$
+	Исходная модель $\mathbf{f(X)}$ --- свёрточная нейросеть, состоящая из двух свёрточных слоёв, имеющих по 4 фильтра каждый, и трёх полносвязных слоёв, входом для которых является конкатенация столбцов выхода второго свёрточного слоя. Зададим $\mathbf{W}\in\mathbb{R}^{n\times4\times2}$ --- матрицу коэффициентов разложения каждого из 4 фильтров двух свёрточных слоёв нейросети на $n$ базисных сферических гармоник.
 	
 	Функция потерь при определении порядка симметрии объекта $\mathbf{x}_i$ при известном истинном порядке $k_{t}$ с помощью вероятности каждого порядка   $P(k)=\frac{\exp(p_k)}{\sum_{j=1}^{N_{order}}\exp(p_j)}$ для вектора $\mathbf{y}_i=[p_1,\dots,p_{N_{order}}]\T$ может быть записана как
 	$$L_c(\mathbf{W})=-\log(P(k_{t}))=\log\Bigg(\sum_{j=1}^{N_{order}}\exp(p_j)\Bigg)-p_{k_{t}}.$$
@@ -57,11 +57,22 @@
 	Получаем решаемую в процессе обучения задачу оптимизации
 	$$\mathbf{W}^*=\argmin_{\textbf{W}}\big(L_c(\mathbf{W})+L_a(\mathbf{W})\big)$$
 	
+	\section{Особенности задачи}
+	
+	Требуется адаптировать модель $\mathbf{f(X, W)}$ так, что при воздействии на исходные данные любым оператором $\pi(tr)$ трансляции $t$ и вращения $r$ реализуется свойство эквивариантности, т.е.
+	$$\mathbf{f}(\pi(tr)\mathbf{X,W)}=[\pi(tr)\mathbf{f}]\mathbf{(X,W)}.$$ Большинство функций активации, обрабатывающих выход свёрточного слоя, заранее не обладают эквивариантностью.
+	
+	\begin{figure}[h!]
+		\centering
+		\includegraphics[width=0.5\textwidth]{images/harmonics_for_012.pdf}
+		\caption{сферические гармоники 0, 1 и 2 порядков}
+	\end{figure}
+	
 	\section{Базовый эксперимент}
-	С целью проверки работоспособности предложенной идеи был проведён базовый эксперимент, в ходе которого была реализована структура базовой нейросети из работы \cite{DeepSymmetry18} с применением свёрточных слоёв из модуля se3cnn \cite{DBLP:journals/corr/abs-1807-02547}. Базовая архитектура была переработана с учётом требований модуля и необходимого порядка сферических гармоник. Согласно эмпирическим данным, достаточно второго--третьего порядков сферических для появления эквивариантности в структуре, поэтому свёрточный фильтр в конволюционном слое представляет из себя комбинацию трёх наборов сферических функций порядков 0, 1 и 2 с двумя наборами коэффициентов разложения для каждого из наборов. Таким образом, выход конволюционного слоя имеет $2*\big((2*0+1)+(2*1+1)+(2*2+1)\big)=18$ карт. 
+	С целью проверки наличия эквивариантности у нейросети, построенной из сферических свёрточных фильтров с учетом ограничений на нелинейную активацию, был проведён базовый эксперимент по реализации структуры базовой нейросети из работы \cite{DeepSymmetry18} с применением свёрточных слоёв из модуля se3cnn \cite{DBLP:journals/corr/abs-1807-02547}. Базовая архитектура была переработана с учётом требований модуля и необходимого порядка сферических гармоник. Согласно эмпирическим данным, достаточно второго--третьего порядков сферических для проявления эквивариантности в структуре, поэтому свёрточный фильтр в конволюционном слое представляет из себя комбинацию трёх наборов сферических функций порядков 0, 1 и 2 с двумя наборами коэффициентов разложения для каждого из наборов. Таким образом, выход конволюционного слоя имеет $2*\big((2*0+1)+(2*1+1)+(2*2+1)\big)=18$ карт. 
 	Синтетические данные для обучения тестовой сети представляют из себя 400 симметричных с порядком 3 относительно любой из главных диагоналей матриц. Выходом для тестовой сети является заданная тремя координатами ось симметрии.
 	
-	
+	\vspace{5mm}
 	\begin{tabular}{c|c|c|c|c}
 		Layer & Type & Input dimensions & Output dimensions & Parameters\\
 		\hline
@@ -73,7 +84,21 @@
 		7 & LeakyReLU &  800 & 800 & \\
 		8 & Linear &  800 & 3 & \\
 	\end{tabular}
+
+	По результатам эксперимента наблюдается постоянство ответов при вращениях на $90^{\deg}$ и $120^{\deg}$. Для повышения выделяемых порядков симметрии требуется применение и комбинация слоёв сферических гармоник более высоких порядков вплоть до порядка $20$, максимального в нашей постановке задачи.
 	
+	\section{Вычислительный эксперимент}
+	
+	Для проведения основного вычислительного эксперимента была построена ResNet (Residual Network) архитектура \cite{DBLP:journals/corr/HeZRS15}, эффективно используемая в обработке изображений ($3.08\%$ ошибка в Imagenet Recognition challenge) \cite{DBLP:journals/corr/ZagoruykoK16}.Особенностью данной архитектуры является добавление промежуточных связей между слоями --- shortcut connections, передающих неизменное входное значение слоя. Выход последовательности слоёв, соединённых shortcut connection, представим в виде $\mathbf{X}\mapsto\mathbf{f(X)+X}$ в отличие от стандартной последовательной архитектуры $\mathbf{X}\mapsto\mathbf{f(X)}$.
+	
+	\begin{figure}[h!]
+		\centering
+		\includegraphics[width=0.5\textwidth]{images/resnet.pdf}
+		\caption{структура ResNet}
+	\end{figure}
+
+	Выбор данной архитектуры в первую очередь обусловлен лучшей устойчивостью к переобучению по сравнению с последовательной нейронной сетью. Согласно математическому представлению архитектуры, каждая последовательность слоёв, соединенная shortcut connection, учится предсказывать разность между входом и выходом. Обычная архитектура не позволяет весам слоя полностью обнулиться без потери возможности обратного распространения ошибки в сети. В ResNet--архитектуре допустима последовательность слоёв с нулевыми коэфффициентами --- данная последовательность является тождественным преобразованием $\mathbf{X}\mapsto\mathbf{X}$. 
+	Аналогично первым статьям, исследующим residual--метод, было решено использовать связи через один свёрточный слой \cite{DBLP:journals/corr/HeZRS15, DBLP:journals/corr/VeitWB16}.
 
 
 	\bibliographystyle{plain}
